# masters_degree_python_project_3

./: Makefile  README.md  main.py  pyproject.toml
docs/: buy.cast  rates.cast  register.cast  sell.cast  show-rates.cast
valutatrade_hub/: config.py  logger.py  logging_config.py  main.py
valutatrade_hub/cli/: commands.py  interface.py
valutatrade_hub/core/: config.py  core.py  decorators.py  exceptions.py  log_record.py  logger.py  usercases.py  utils.py
valutatrade_hub/core/currencies/: __init__.py  abc.py  crypto.py  fiat.py
valutatrade_hub/core/models/: __init__.py  buy_info.py  operation_info.py  portfolio.py  user.py  wallet.py
valutatrade_hub/core/utils/: currency_rates.py  data.py  rates.py
valutatrade_hub/infra/: __init__.py  data.py  database.py  settings.py  singleton.py  validator.py
valutatrade_hub/logging_config/: __init__.py  log_record.py
valutatrade_hub/logging_config/formatter/: __init__.py  json.py  str.py
valutatrade_hub/parser_service/: config.py  exception.py  log_record.py  logger.py  updater.py
valutatrade_hub/parser_service/api_clients/: __init__.py  abc.py  coin_gecko.py  exchange_rate.py
valutatrade_hub/parser_service/models/: __init__.py  api_client_info.py  exchange_rate.py  rate.py  storage.py
valutatrade_hub/parser_service/utils/: files.py  lead_time.py
