[tool.poetry]
name = "masters_degree_python_project_3"
version = "0.1.0"
description = ""
authors = ["Iuliia <prusova.work@gmail.com>"]
packages = [
 { include = "valutatrade_hub" },
]

[tool.poetry.dependencies]
python = "^3.10"
prettytable = "^3.16.0"
requests = "^2.32.5"
toml = "^0.10.2"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
ruff = "^0.14.4"
asciinema = "^2.4.0"
isort = "^7.0.0"

[tool.poetry.scripts]
project = "valutatrade_hub.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 79
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
